<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".YodaActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ninehundredyears"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/ninehundredyears" />

        <Button
            android:id="@+id/beware"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/beware" />

        <Button
            android:id="@+id/big"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/big" />

        <Button
            android:id="@+id/confront"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/confront" />

        <Button
            android:id="@+id/difficult"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/difficult" />

        <Button
            android:id="@+id/harm"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/harm" />

        <Button
            android:id="@+id/hear"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/hear" />

        <Button
            android:id="@+id/help"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/help" />

        <Button
            android:id="@+id/last"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/last" />

        <Button
            android:id="@+id/laugh"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/laugh" />

        <Button
            android:id="@+id/nonono"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/nonono" />

        <Button
            android:id="@+id/seek"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/seek" />
        
        <Button
            android:id="@+id/strong"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/strong" />

        <Button
            android:id="@+id/tryy"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/tryy" />

        <Button
            android:id="@+id/underestimate"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/underestimate" />

        <Button
            android:id="@+id/wondering"
            style="@style/menuButton.quotes.yoda"
            android:text="@string/wondering" />
        
    </LinearLayout>

</ScrollView>