<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VaderActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/altering"
            style="@style/menuButton.quotes.vader"
            android:text="@string/altering" />
        
        <Button
            android:id="@+id/asyouwish"
            style="@style/menuButton.quotes.vader"
            android:text="@string/asyouwish" />
        
        <Button
            android:id="@+id/bidding"
            style="@style/menuButton.quotes.vader"
            android:text="@string/bidding" />
        
        <Button
            android:id="@+id/destroyyou"
            style="@style/menuButton.quotes.vader"
            android:text="@string/destroyyou" />
        
        <Button
            android:id="@+id/dontfail"
            style="@style/menuButton.quotes.vader"
            android:text="@string/dontfail" />
        
        <Button
            android:id="@+id/dontknoww"
            style="@style/menuButton.quotes.vader"
            android:text="@string/dontknoww" />
        
        <Button
            android:id="@+id/expecting"
            style="@style/menuButton.quotes.vader"
            android:text="@string/expecting" />
        
        <Button
            android:id="@+id/faith"
            style="@style/menuButton.quotes.vader"
            android:text="@string/faith" />
        
        <Button
            android:id="@+id/father"
            style="@style/menuButton.quotes.vader"
            android:text="@string/father" />
        
        <Button
            android:id="@+id/giveyourself"
            style="@style/menuButton.quotes.vader"
            android:text="@string/giveyourself" />
        
        <Button
            android:id="@+id/haveyounow"
            style="@style/menuButton.quotes.vader"
            android:text="@string/haveyounow" />
        
        <Button
            android:id="@+id/joinus"
            style="@style/menuButton.quotes.vader"
            android:text="@string/joinus" />
        
        <Button
            android:id="@+id/leavethem"
            style="@style/menuButton.quotes.vader"
            android:text="@string/leavethem" />
        
    </LinearLayout>

</ScrollView>