<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmperorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/skills"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/skills" />

        <Button
            android:id="@+id/anakin"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/anakin" />

        <Button
            android:id="@+id/become"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/become" />

        <Button
            android:id="@+id/doit"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/doit" />

        <Button
            android:id="@+id/forcestrong"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/forcestrong" />

        <Button
            android:id="@+id/fulfilling"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/fulfilling" />

        <Button
            android:id="@+id/good"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/good" />

        <Button
            android:id="@+id/killhimnow"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/killhimnow" />

        <Button
            android:id="@+id/senate"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/senate" />

        <Button
            android:id="@+id/threatening"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/threatening" />

        <Button
            android:id="@+id/youdidwell"
            style="@style/menuButton.quotes.emperor"
            android:text="@string/youdidwell" />
        
    </LinearLayout>

</ScrollView>