<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BenActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/always"
            style="@style/menuButton.quotes.ben"
            android:text="@string/always" />
        
        <Button
            android:id="@+id/disturbance"
            style="@style/menuButton.quotes.ben"
            android:text="@string/disturbance" />
        
        <Button
            android:id="@+id/dontbeafraid"
            style="@style/menuButton.quotes.ben"
            android:text="@string/dontbeafraid" />
        
        <Button
            android:id="@+id/eyes"
            style="@style/menuButton.quotes.ben"
            android:text="@string/eyes" />
        
        <Button
            android:id="@+id/feel"
            style="@style/menuButton.quotes.ben"
            android:text="@string/feel" />
        
        <Button
            android:id="@+id/foolish"
            style="@style/menuButton.quotes.ben"
            android:text="@string/foolish" />
        
        <Button
            android:id="@+id/forceluke"
            style="@style/menuButton.quotes.ben"
            android:text="@string/forceluke" />
        
        <Button
            android:id="@+id/luck"
            style="@style/menuButton.quotes.ben"
            android:text="@string/luck" />
        
        <Button
            android:id="@+id/nomoon"
            style="@style/menuButton.quotes.ben"
            android:text="@string/nomoon" />
        
        <Button
            android:id="@+id/seduced"
            style="@style/menuButton.quotes.ben"
            android:text="@string/seduced" />
        
    </LinearLayout>

</ScrollView>