<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LukeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/toschi"
            style="@style/menuButton.quotes.luke"
            android:text="@string/toschi" />
        
        <Button
            android:id="@+id/afraid"
            style="@style/menuButton.quotes.luke"
            android:text="@string/afraid" />
        
        <Button
            android:id="@+id/becomejedi"
            style="@style/menuButton.quotes.luke"
            android:text="@string/becomejedi" />
        
        <Button
            android:id="@+id/callmeluke"
            style="@style/menuButton.quotes.luke"
            android:text="@string/callmeluke" />
        
        <Button
            android:id="@+id/glad"
            style="@style/menuButton.quotes.luke"
            android:text="@string/glad" />
        
        <Button
            android:id="@+id/junk"
            style="@style/menuButton.quotes.luke"
            android:text="@string/junk" />
        
        <Button
            android:id="@+id/neverturn"
            style="@style/menuButton.quotes.luke"
            android:text="@string/neverturn" />
        
        <Button
            android:id="@+id/planet"
            style="@style/menuButton.quotes.luke"
            android:text="@string/planet" />
        
        <Button
            android:id="@+id/rebellion"
            style="@style/menuButton.quotes.luke"
            android:text="@string/rebellion" />
        
        <Button
            android:id="@+id/taste"
            style="@style/menuButton.quotes.luke"
            android:text="@string/taste" />
        
    </LinearLayout>

</ScrollView>