<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LeiaActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/carpet"
            style="@style/menuButton.quotes.leia"
            android:text="@string/carpet" />
        
        <Button
            android:id="@+id/doasitellyou"
            style="@style/menuButton.quotes.leia"
            android:text="@string/doasitellyou" />
        
        <Button
            android:id="@+id/dontknow"
            style="@style/menuButton.quotes.leia"
            android:text="@string/dontknow" />
        
        <Button
            android:id="@+id/helpme"
            style="@style/menuButton.quotes.leia"
            android:text="@string/helpme" />
        
        <Button
            android:id="@+id/laserbrain"
            style="@style/menuButton.quotes.leia"
            android:text="@string/laserbrain" />
        
        <Button
            android:id="@+id/reward"
            style="@style/menuButton.quotes.leia"
            android:text="@string/reward" />
        
        <Button
            android:id="@+id/scruffy"
            style="@style/menuButton.quotes.leia"
            android:text="@string/scruffy" />
        
        <Button
            android:id="@+id/shortt"
            style="@style/menuButton.quotes.leia"
            android:text="@string/shortt" />
        
    </LinearLayout>

</ScrollView>